fixed text size and spacing

--- a/projects/style.css
+++ b/projects/style.css
@@ -54,28 +54,29 @@ article {
 h2 {
     font-family: 'Libre Caslon Display', sans-serif;
     font-weight: lighter;
-    font-size: 1.5rem;
-    padding-bottom: 1rem;
+    font-size: 1.8rem;
 }
 
 article img {
     width: 100%;
 }
 
-h3 {
+.description {
+    text-align: left;
+    padding: 1 rem;
     font-size: .8rem;
+}
+
+h3 {
     font-weight: bold;
     color: gray;
-    text-align: left;
-    padding-top: 1rem;
-
+    letter-spacing: .03rem;
 }
-
 
 p {
-    text-align: left;
-    font-size: .8rem;
+    letter-spacing: .02rem;
 }
+
 
 @media (min-width: 427px)  {
 
